# fern-types

./: .gitignore  .ocamlformat  README.md  dune-project  fern_types.opam
lib/: depty.ml  depty.mli  deptyZ3.ml  deptyZ3.mli  dune
resources/: README.md
test/: depty.ml  dune
test/depty_tests/: reduce.ml  type.ml
